Add changes based on new requirements

--- a/app/views/devise_invitations/mailer/instructions.html.erb
+++ b/app/views/devise_invitations/mailer/instructions.html.erb
@@ -7,3 +7,9 @@
 <p>
   <%=link_to 'Accept Invitation', accept_invitation_request_url(token: @token) %>
 </p>
+
+<p style="margin-bottom:0">Sincerely,</p>
+<p style="margin:0">The Appruve.me Team</p>
+<p style="margin-top:0">Your Pre-Approval Parter</p>
+<p style="margin-bottom:0">support@appruv.me</p>
+<p style="margin-top:0">(347) 903-3280</p>
