fix issue with invitation text

--- a/app/views/devise_invitations/mailer/instructions.html.erb
+++ b/app/views/devise_invitations/mailer/instructions.html.erb
@@ -1,7 +1,7 @@
 <p> Dear <%= @buyer.first_name.capitalize if @buyer.present? %>, </p>
 
 <p>
-  Your loan officer, <%= @sender.username %> has invited you to take control of your on demand pre-approval letters and mortgage calculations. Please click on the link below to register your account.
+  Your loan officer, <%= @sender.username %>, has given you access to Appruv in order to generate on-demand pre-approval letters and mortgage calculations as you need them. Please click on the link below to register your account.
 </p>
 
 <p>
